2016-12-31	Looks stable and somewhat symmetrical.

		include/innocent-pear/dawg.h :
		- factored dawg_impl<...> into two classes, dawg_impl_1<...>
		  and dawg_impl_2<...>
		- dawg_impl_2<...>::operator>>(.) now writes characters in
		  random order

		include/innocent-pear/omg.h :
		- now uses dawg_impl_2<...> instead of dawg_impl<...>
		- made buffer for "/dev/tty" oversized

		include/innocent-pear/yodawg.h :
		- now uses dawg_impl_2<...> instead of dawg_impl<...>

		share/innocent-pear/doge-i.h :
		- further reduced output of innocent_pear_CHAFF(.)

2016-12-30	"No, I'm a frayed knot."  (2)

		include/innocent-pear/orly.h ,
		include/innocent-pear/yarly.h :
		- yarly<...>::wut(...) ~> orly<...>::wot(...)
		- yarly<...>::zot(...) ~> orly<...>::zot(...)

		include/innocent-pear/omg.h :
		- changed to use orly<...>::zot(...)

		include/innocent-pear/host/rly.h :
		- removed rly<...>::wut(...)

		share/innocent-pear/doge-01.cc :
		- combined 3 functions into one huge function -- again

		test/test-doge-with-dawg.cc ,
		test/test-doge-with-dawg.good :
		- new

		GNUmakefile :
		- added test-doge-with-dawg test case

2016-12-29	"No, I'm a frayed knot."

		include/innocent-pear/teh.h :
		- added a layer of indirection to allow several "variables"
		  to be shared, by grouping identical constants into "bins"
		- "variables" may now go into read-only data
		- now uses __attribute__((nocommon)) to prevent "variables"
		  from entering BSS

		include/innocent-pear/dawg.h :
		- duplicated code and lowered maximum levels of scrambling,
		  to reduce compiler's resource usage  :-/
		- dawg_impl<, CT, , >::operator>>(char *) -> dawg_impl<, CT,
		  , >::operator>>(CT *)
		- rewrote to use teh<...>

		include/innocent-pear/yarly.h :
		- added yarly<...>::zot(...)
		- fixed excess arguments in yarly<...>::wut(...) (untested)
		- yarly<...>::wut(p, q) now no longer tries to confuse alias
		  analysis for p and q, if the precise distance between them
		  is known
